force-app/main/default/objects/Target__c/Target__c.object-meta.xml
<CustomObject>
    <description>Represent a selected target for achieving a particular Key Result with its Objectivity</description>
    <label>Target</label>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>