force-app/main/default/objects/Target__c/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>ContractType</label>
    <length>30</length>
    <type>Text</type>
</CustomField>