force-app/main/default/objects/Target__c/fields/Key_Result__c.field-meta.xml
<CustomField>
    <fullName>Key_Result__c</fullName>
    <label>Key Result</label>
    <referenceTo>KeyResult__c</referenceTo>
    <relationshipName>TestTargets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>