force-app/main/default/objects/Target__c/fields/ToAchieve__c.field-meta.xml
<CustomField>
    <fullName>ToAchieve__c</fullName>
    <label>ToAchieve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>