force-app/main/default/objects/Target__c/validationRules/Non_negative_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_negative_fields</fullName>
    <active>true</active>
    <errorConditionFormula>Completed__c &lt; 0 ||  ToAchieve__c &lt; 0</errorConditionFormula>
    <errorMessage>Amount of completed or assigned amount of targets cannot be negative</errorMessage>
</ValidationRule>